# orthotech_dev_duplicate_submodule_version

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  linux-requirements.txt  vcpkg.json  windows-requirements.txt
.githooks/: commit.msg  pre-commit  pre-push
.github/workflows/: CI.yml
config/: dependencies.yml
hooks/: pre-commit.sh
include/: calculations.hpp
scripts/: generate_requirements.py
src/: calculations.cpp  main.cpp
